# object_detection

./: .~lock.sift.ods#  CMakeLists.txt  PC_315966449519192000.ply  compare.launch  extracted_radius_10.pcd  extracted_radius_2.pcd  package.xml  sift.ods
launch/: compare.launch
model/3D_Models/Audi_R8/: Audi R8_edit  Audi R8_one_car_distance  Audi R8_one_car_distance_left_back  Audi_R8_edit00000.pcd
model/3D_Models/Audi_R8/scan/: Audi_R8_edit_noisy00000.pcd  back_3.5m_word_frame  back_3.5m_word_frame00000.pcd  back_3.5m_word_frame_noisy00000.pcd  back_7m_word_frame  back_7m_word_frame00000.pcd  back_7m_word_frame_noisy00000.pcd  back_r8.pcd  left_back_10m  left_back_10m00000.pcd  left_back_10m_noisy00000.pcd  left_back_3.5m_word_frame  left_back_3.5m_word_frame_noisy00000.pcd  left_back_7m_word_frame  left_back_7m_word_frame00000.pcd  left_back_7m_word_frame_noisy00000.pcd  left_front_10m  left_front_10m00000.pcd  left_front_10m_noisy00000.pcd  left_front_3.5m_word_frame  left_front_3.5m_word_frame00000.pcd  left_front_3.5m_word_frame_noisy00000.pcd  one_car_distance_left_back00000.pcd  one_car_distance_left_back_noisy00000.pcd  one_car_distance_left_front00000.pcd  one_car_distance_left_front_noisy00000.pcd  right_10m_word_frame  right_10m_word_frame00000.pcd  (+26 more)
output/: .~lock.FPFH_k=20.csv#  .~lock.PC_315966449519192000_FPFH_r=0.3.csv#  .~lock.whole_r8_FPFH_r=0.3_pos.csv#  FPFH_k=10.csv  FPFH_k=20.csv  PC_315966449519192000_FPFH_r=0.3.csv  PFH_k=10.csv  PFH_k=20.csv  cluster_pos_agglomerative_average.csv  cluster_pos_self.csv  whole_r8_FPFH_r=0.3.csv
output/FPFH_whole_scenes_cluster/: .~lock.cluster_pos.csv#  .~lock.whole_r8_FPFH_r=0.3_pos.csv#  PC_315966449519192000_FPFH_r=0.3_pos.csv  whole_r8_FPFH_r=0.3_pos.csv
output/FPFH_whole_scenes_cluster/descriptor_cluster/: cluster_pos_agglomerative.csv  cluster_pos_kmeans.csv
output/keypoints/: FPFH_k=20.csv  PFH_descriptors_all.csv  PFH_k=20.csv
output/old_no_position/: SHOT_k=20.csv  cluster.csv
segmented car from scene/: left_back_car.pcd  right_back_car.pcd
segmented_car_from_scene/: PC_315966449519192000.pcd  rm_g_extracted_radius_2.pcd
src/: agglomerative_clustering.py  icp.cpp  icp_matching.cpp  kMeans.py  kd_search.cpp  model_sift.cpp  passthrough.cpp  ply2pcd.cpp  range_image_visualization.cpp  range_img.cpp  read_pc.cpp  test_sift.cpp  test_voxel_grid_rate.cpp  viz_cluster_fpfh.cpp
(+9 files in other folders)
